--- a/gitinitiation.html
+++ b/gitinitiation.html
@@ -6,5 +6,7 @@
 <body>
 <h1>ceci est une modif de mon fichier</h1>
 bawaba
+j'espère que vous allez bien zr que vous passez une bonne journée
+
 </body>
 </html>
